# docs/api/openapi.json
@@ -3803,7 +3803,8 @@
           "identity",
           "project",
           "environment",
-          "secret"
+          "secret",
+          "about"
         ],
         "type": "object",
         "properties": {
@@ -3834,6 +3835,12 @@
             ]
           },
           "secret": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
+          "about": {
             "type": [
               "null",
               "string"
